# scale-value

./: .rustfmt.toml  CHANGELOG.md  CODEOWNERS  Cargo.toml  FILE_TEMPLATE  README.md  RELEASING.md
.github/workflows/: rust.yml
examples/: value_macro.rs
src/: at.rs  error.rs  lib.rs  macros.rs  prelude.rs  value.rs  value_type.rs
src/scale_impls/: bit_sequence.rs  decode.rs  encode.rs  mod.rs  type_id.rs
src/scale_impls/tracing_decoder/: error.rs  mod.rs  path.rs  visitor.rs
src/serde_impls/: bitvec_helpers.rs  deserialize.rs  deserializer.rs  mod.rs  serialize.rs  serializer.rs
src/string_impls/: formatter.rs  from_string.rs  mod.rs  string_helpers.rs  to_string.rs
src/string_impls/custom_formatters/: hex.rs  mod.rs
src/string_impls/custom_parsers/: hex.rs  mod.rs  ss58.rs
testing/no_std/: Cargo.toml  README.md
testing/no_std/src/: lib.rs
