[package]
name = "scale-value"
version = "0.10.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"

license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/paritytech/scale-value"
documentation = "https://docs.rs/scale-value"
homepage = "https://www.parity.io/"
description = "Encode and decode values of arbitrary shapes to SCALE bytes"
keywords = ["parity", "scale", "encoding", "decoding"]
include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE"]

[features]
default = ["serde", "from_string", "parser-ss58"]
# Enable support for parsing strings into Values.
from_string = ["dep:yap"]
# Enable serde support for serializing/deserializing Values.
serde = ["dep:serde", "scale-bits/serde"]
# Provide an ss58 address parser
parser-ss58 = ["dep:base58", "dep:blake2", "from_string"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive", "full"] }
serde = { version = "1.0.124", features = ["derive"], optional = true }
frame-metadata = { version = "15.0.0", default-features = false, features = ["v14"] }
thiserror = "1.0.24"
scale-info = { version = "2.5.0", default-features = false, features = ["std"] }
scale-decode = { version = "0.7.0", default-features = false }
scale-encode = { version = "0.3.0", default-features = false, features = ["bits"] }
scale-bits = "0.3.0"
either = "1.6.1"
yap = { version = "0.10.0", optional = true }
base58 = { version = "0.2.0", optional = true }
blake2 = { version = "0.10.6", optional = true, default_features = false }

[dev-dependencies]
hex = "0.4.3"
serde_json = "1.0.64"
scale-decode = { version = "0.7.0", features = ["derive"] }
